--- a/gallery.html
+++ b/gallery.html
@@ -31,7 +31,7 @@
         
 
         <nav>
-            <a href="index.html" class="menu">Oferta</a><a href="onas.html" class="menu" id="active">O nas</a><a href="gallery.html" class="menu">Galeria</a><a href="#" class="menu">Kontakt</a>
+            <a href="index.html" class="menu">Oferta</a><a href="onas.html" class="menu">O nas</a><a href="gallery.html" class="menu" id="active">Galeria</a><a href="#" class="menu">Kontakt</a>
         </nav>
 
 
